@@ -17,4 +17,5 @@
 
 application/postscript		application/pdf			0	gstopdf
 application/vnd.cups-pdf	application/vnd.cups-raster	99	gstoraster
+application/vnd.cups-pdf	image/pwg-raster		99	gstoraster
 application/vnd.cups-postscript	application/vnd.cups-raster	175	gstoraster
