@@ -16,3 +16,4 @@
 #
 
 application/vnd.cups-pdf	application/vnd.cups-raster	100	pdftoraster
+application/vnd.cups-pdf	image/pwg-raster		100	pdftoraster
